added new submissions
- SVD
- taylermittchel
- Recommender keras

--- a/src/SVD_surprise.ipynb
+++ b/src/SVD_surprise.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,11 +129,20 @@
     "note: run on Leonhard cluster (20 cores and 22GB mem)\n",
     "cv=10\n",
     "\n",
+    "0.98460820897\n",
+    "{'lr_bi': 0.0045699937900061235, 'lr_bu': 0.0053470080935120153, 'lr_pu': 0.017294772891100464, 'lr_qi': 0.016495757165001537, 'n_epochs': 26, 'n_factors': 159, 'reg_bi': 0.026026359248845211, 'reg_bu': 0.099924883620357285, 'reg_pu': 0.10778441193893745, 'reg_qi': 0.071670616244315685}\n",
+    "\n",
+    "----\n",
+    "\n",
     "0.98489843593\n",
     "{'lr_bi': 0.0043688979424132048, 'lr_bu': 0.005613464182452876, 'lr_pu': 0.022148955075059311, 'lr_qi': 0.012530626289208299, 'n_factors': 151, 'reg_bi': 0.042342905803236859, 'reg_bu': 0.073415041823889998, 'reg_pu': 0.12513844856777867, 'reg_qi': 0.060228735604464054}\n",
     "\n",
     "0.984953534195\n",
     "{'lr_bi': 0.0040080904244357771, 'lr_bu': 0.0083752718099860367, 'lr_pu': 0.010813216008005243, 'lr_qi': 0.018992188100229335, 'n_factors': 158, 'reg_bi': 0.02384386240305832, 'reg_bu': 0.087957272220067495, 'reg_pu': 0.17370665665508969, 'reg_qi': 0.042977558957037719}\n",
+    "\n",
+    "0.985070495179\n",
+    "{'init_std_dev': 0.031184006269592716, 'lr_bi': 0.0048978641284463517, 'lr_bu': 0.010989040837895429, 'lr_pu': 0.016034035470675671, 'lr_qi': 0.012197663818154646, 'n_factors': 151, 'reg_bi': 0.029524162229769623, 'reg_bu': 0.042540872922616352, 'reg_pu': 0.071567945780504169, 'reg_qi': 0.075092708208885889}\n",
+    "\n",
     "\n",
     "0.9853091859177997\n",
     "{'lr_bi': 0.0050565201838808, 'lr_bu': 0.005529901817482, 'lr_pu': 0.021009781711363945, 'lr_qi': 0.019237920706921686, 'n_factors': 153, 'reg_bi': 0.027507293418947705, 'reg_bu': 0.04792231303919493, 'reg_pu': 0.1051659555261933, 'reg_qi': 0.05739791764348274}\n",
@@ -219,24 +228,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x114828ef0>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x10e1e6f60>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# choose optimal params from above\n",
-    "# {'lr_bi': 0.0050565201838808, 'lr_bu': 0.005529901817482, 'lr_pu': 0.021009781711363945, 'lr_qi': 0.019237920706921686, 'n_factors': 153, 'reg_bi': 0.027507293418947705, 'reg_bu': 0.04792231303919493, 'reg_pu': 0.1051659555261933, 'reg_qi': 0.05739791764348274}\n",
-    "algo = SVD(n_factors=153, lr_bi=0.0050565201838808, lr_bu=0.005529901817482, lr_pu=0.021009781711363945, lr_qi=0.019237920706921686, reg_bi=0.027507293418947705, reg_bu=0.04792231303919493, reg_pu=0.1051659555261933, reg_qi=0.05739791764348274)\n",
+    "# {'lr_bi': 0.0045699937900061235, 'lr_bu': 0.0053470080935120153, 'lr_pu': 0.017294772891100464, 'lr_qi': 0.016495757165001537, 'n_epochs': 26, 'n_factors': 159, 'reg_bi': 0.026026359248845211, 'reg_bu': 0.099924883620357285, 'reg_pu': 0.10778441193893745, 'reg_qi': 0.071670616244315685}\n",
+    "algo = SVD(n_factors=159, lr_bi=0.0045699937900061235, lr_bu=0.0053470080935120153, lr_pu=0.017294772891100464, lr_qi=0.016495757165001537, reg_bi=0.026026359248845211, reg_bu=0.099924883620357285, reg_pu=0.10778441193893745, reg_qi=0.071670616244315685, n_epochs=26)\n",
     "\n",
     "# train \n",
     "algo.fit(data.build_full_trainset())"
@@ -252,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.3600191959191252, details={'was_impossible': False})"
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.308186087130427, details={'was_impossible': False})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,17 +316,17 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.360019\n",
-      "r73_c1,3.073280\n",
-      "r156_c1,3.804047\n",
-      "r160_c1,3.404724\n",
-      "r248_c1,3.511845\n",
+      "r37_c1,3.308186\n",
+      "r73_c1,3.116033\n",
+      "r156_c1,3.722401\n",
+      "r160_c1,3.310046\n",
+      "r248_c1,3.456245\n",
       "r25\n"
      ]
     }
    ],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_4.csv')\n",
+    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_5.csv')\n",
     "print(output[0:100])"
    ]
   },
@@ -345,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
