added doc to some predictors

--- a/src_submission/SVD_basic.ipynb
+++ b/src_submission/SVD_basic.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Idea: Assume the data has an underlying structure where each user and each item has a representation in the same concept space. Can use baseline solution (approximated matrix X_pred) as an initialization for SVD. By discarding small singular values can remove noise and approximate X_true. "
+    "Idea: Assume the data has an underlying structure where each user and each item has a representation in the same concept space. Can use baseline solution (approximated matrix X_init, where missing ratings are set to average of user's available ratings) as an initialization for SVD. By discarding small singular values we can remove noise and approximate X_true. "
    ]
   },
   {
@@ -59,6 +59,7 @@
     }
    ],
    "source": [
+    "# build the rating matrix from the training data set(available ratings), entries for unvailable ratings are set to 0\n",
     "X = load_data()\n",
     "print(X[0:10,0:10])"
    ]
@@ -67,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impute missing entries (average rating per user)"
+    "## Predict missing ratings with average ratings per user"
    ]
   },
   {
@@ -103,12 +104,15 @@
     }
    ],
    "source": [
+    "# calcualte a vector which contains the means of the available ratings of each user\n",
     "y = X.sum(axis=1)\n",
     "rating_counts = np.count_nonzero(X, axis =1)\n",
     "average_per_user = y/rating_counts\n",
     "X_init = np.copy(X)\n",
     "for row in range(X.shape[0]):\n",
+    "    # entries for unavailable ratings were set to 0 at time when the rating matrix was built\n",
     "    no_rating = (X[row, :] == 0)\n",
+    "    # for each user, set all the missing ratings to the average of this users available ratings\n",
     "    X_init[row, no_rating] = average_per_user[row]\n",
     "print(X_init[0:10, 0:10])\n"
    ]
@@ -136,10 +140,12 @@
     }
    ],
    "source": [
+    "# do a svd of the X_init matrix built above\n",
     "U, d, Vt = np.linalg.svd(X_init, full_matrices=True)\n",
     "print(U.shape)\n",
     "print(d.shape)\n",
     "print(Vt.shape)\n",
+    "# create a diagonal matrix from the vector d of the SVD\n",
     "D = np.zeros_like(X_init)\n",
     "D[:d.shape[0], :d.shape[0]] = np.diag(d)"
    ]
@@ -150,6 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# assure equality (within a tolerance of U* D * Vt and X_init)\n",
     "assert np.allclose(np.dot(U, np.dot(D, Vt)), X_init)"
    ]
   },
@@ -218,9 +225,11 @@
    "source": [
     "# Reconstruct Matrix -> Approximation by removing small singular values\n",
     "k = 15\n",
+    "# extract the submatrices from U,D and Vt\n",
     "U_prime = U[:,:k]\n",
     "D_prime = D[:k, :k]\n",
     "Vt_prime = Vt[:k, :]\n",
+    "# reconstruct the matrix ba multiplying back together the single matrices\n",
     "X_pred = np.dot(U_prime, np.dot(D_prime, Vt_prime))\n",
     "assert X_init.shape == X_pred.shape"
    ]
@@ -238,6 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# write the predicted ratings back to a csv file\n",
     "output = write_submission_file(X_pred, \"submission_SVD_basic_1.csv\")\n",
     "print(output[0:100])"
    ]
