added some more doc

--- a/src_submission/ALS.ipynb
+++ b/src_submission/ALS.ipynb
@@ -77,6 +77,7 @@
     "from surprise.model_selection import cross_validate\n",
     "\n",
     "algo = BaselineOnly()\n",
+    "# do a cross validation with 5 folds\n",
     "results = cross_validate(algo, data, verbose=True)"
    ]
   },
@@ -180,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
