--- a/src_submission/NMF.ipynb
+++ b/src_submission/NMF.ipynb
@@ -87,7 +87,7 @@
     "                'biased': [True, False],\n",
     "             }      \n",
     "        \n",
-    "\n",
+    "# do a cross validation of to find the best hyper parameters\n",
     "gs = RandomizedSearchCV(algo_class=NMF, param_distributions=param_grid, measures=['rmse'], \n",
     "                        cv=10, joblib_verbose=100, n_jobs=-1, n_iter=5)\n",
     "gs.fit(data)\n",
