--- a/src_submission/SVD_basic.ipynb
+++ b/src_submission/SVD_basic.ipynb
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "# calcualte a vector which contains the means of the available ratings of each user\n",
+    "# calculate a vector which contains the means of the available ratings of each user\n",
     "y = X.sum(axis=1)\n",
     "rating_counts = np.count_nonzero(X, axis =1)\n",
     "average_per_user = y/rating_counts\n",
