--- a/src_submission/SVD_improved.ipynb
+++ b/src_submission/SVD_improved.ipynb
@@ -315,7 +315,7 @@
     "                'n_epochs': stats.randint(10,30)\n",
     "             }         \n",
     "        \n",
-    "\n",
+    "# do cross validation to find the bast hyper parameters\n",
     "gs = RandomizedSearchCV(algo_class=SVD, param_distributions=param_grid, measures=['rmse'], \n",
     "                        cv=10, joblib_verbose=100, n_jobs=-1, n_iter=100)\n",
     "gs.fit(data)\n",
@@ -456,7 +456,7 @@
     "n_epochs = 26\n",
     "algo = SVD(n_factors=159, lr_bi=0.0045699937900061235, lr_bu=0.0053470080935120153, lr_pu=0.017294772891100464, lr_qi=0.016495757165001537, reg_bi=0.026026359248845211, reg_bu=0.099924883620357285, reg_pu=0.10778441193893745, reg_qi=0.071670616244315685, n_epochs=n_epochs)\n",
     "\n",
-    "# train \n",
+    "# train the algorithm\n",
     "algo.fit(data.build_full_trainset())"
    ]
   },
