added doc to files

--- a/src_submission/ALS.ipynb
+++ b/src_submission/ALS.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import helpers\n",
-    "from surprise_helpers import CustomReader, get_ratings_from_predictions\n",
+    "import data_handler\n",
+    "from surprise_extensions import CustomReader, get_ratings_from_predictions\n",
     "from surprise import Reader, Dataset"
    ]
   },
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "reader = CustomReader()\n",
-    "filepath = helpers.get_train_file_path()\n",
+    "filepath = data_handler.get_train_file_path()\n",
     "data = Dataset.load_from_file(filepath, reader=reader)"
    ]
   },
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "test_file_path = helpers.get_test_file_path()\n",
+    "test_file_path = data_handler.get_test_file_path()\n",
     "test_data = Dataset.load_from_file(test_file_path, reader=reader)\n",
     "testset = test_data.construct_testset(test_data.raw_ratings)\n",
     "predictions = algo.test(testset)\n",
@@ -153,7 +153,7 @@
     }
    ],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_baseline.csv')\n",
+    "output = data_handler.write_submission(ratings, 'submission_surprise_baseline.csv')\n",
     "print(output[0:10])"
    ]
   },
