--- a/src_submission/SVD_improved.ipynb
+++ b/src_submission/SVD_improved.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,12 +58,12 @@
     "from six.moves import range\n",
     "from __future__ import (absolute_import, division, print_function, unicode_literals)\n",
     "\n",
-    "from surprise_helpers import CustomReader, get_ratings_from_predictions\n",
+    "from surprise_extensions import CustomReader, get_ratings_from_predictions\n",
     "from surprise import Reader, Dataset\n",
     "from surprise.model_selection.search import RandomizedSearchCV\n",
     "from surprise import AlgoBase\n",
     "\n",
-    "import helpers"
+    "import data_handler"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "outputs": [],
    "source": [
     "reader = CustomReader()\n",
-    "filepath = helpers.get_train_file_path()\n",
+    "filepath = data_handler.get_train_file_path()\n",
     "data = Dataset.load_from_file(filepath, reader=reader)"
    ]
   },
@@ -505,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_file_path = helpers.get_test_file_path()\n",
+    "test_file_path = data_handler.get_test_file_path()\n",
     "test_data = Dataset.load_from_file(test_file_path, reader=reader)\n",
     "testset = test_data.construct_testset(test_data.raw_ratings)\n",
     "predictions = algo.test(testset)"
@@ -540,7 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_5.csv')"
+    "output = data_handler.write_submission(ratings, 'submission_surprise_SVD_5.csv')"
    ]
   }
  ],
