--- a/src_submission/average_over_users.ipynb
+++ b/src_submission/average_over_users.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from helpers import load_data, write_submission_file"
+    "from data_handler import load_data, write_submission_file"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impute missing entries (average rating per item)"
+    "## For each item, predict its missing entries by the average of that item's available ratings"
    ]
   },
   {
@@ -75,30 +75,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 5.        ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.         3.55913113 5.\n",
-      "  3.44661922 4.         2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 2.         3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 2.         3.48358586 3.93647282 3.55913113 5.\n",
-      "  3.44661922 3.         2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 5.\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 5.\n",
-      "  3.44661922 3.87749706 2.90196078 3.        ]\n",
-      " [3.37941176 3.50094162 3.48358586 1.         3.55913113 5.\n",
-      "  3.44661922 5.         2.90196078 3.6460717 ]]\n"
+      "[[3.3794117 3.5009415 3.4835858 3.936473  3.5591311 4.68277   3.4466193\n",
+      "  3.877497  2.9019608 5.       ]\n",
+      " [3.3794117 3.5009415 3.4835858 3.        3.5591311 5.        3.4466193\n",
+      "  4.        2.9019608 3.6460717]\n",
+      " [3.3794117 3.5009415 3.4835858 2.        3.5591311 4.68277   3.4466193\n",
+      "  3.877497  2.9019608 3.6460717]\n",
+      " [3.3794117 3.5009415 3.4835858 3.936473  3.5591311 4.68277   3.4466193\n",
+      "  3.877497  2.9019608 3.6460717]\n",
+      " [3.3794117 2.        3.4835858 3.936473  3.5591311 5.        3.4466193\n",
+      "  3.        2.9019608 3.6460717]\n",
+      " [3.3794117 3.5009415 3.4835858 3.936473  3.5591311 5.        3.4466193\n",
+      "  3.877497  2.9019608 3.6460717]\n",
+      " [3.3794117 3.5009415 3.4835858 3.936473  3.5591311 4.68277   3.4466193\n",
+      "  3.877497  2.9019608 3.6460717]\n",
+      " [3.3794117 3.5009415 3.4835858 3.936473  3.5591311 4.68277   3.4466193\n",
+      "  3.877497  2.9019608 3.6460717]\n",
+      " [3.3794117 3.5009415 3.4835858 3.936473  3.5591311 5.        3.4466193\n",
+      "  3.877497  2.9019608 3.       ]\n",
+      " [3.3794117 3.5009415 3.4835858 1.        3.5591311 5.        3.4466193\n",
+      "  5.        2.9019608 3.6460717]]\n"
      ]
     }
    ],
    "source": [
+    "# y is a vector containg the sums of each item's available ratings\n",
     "y = X.sum(axis=0)\n",
     "rating_counts = np.count_nonzero(X, axis=0)\n",
     "average_per_item = y/rating_counts\n",
@@ -122,15 +123,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-90db326a6903>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrite_submission_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'submission_average_over_users_0.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/CIL_project/src/helpers.py\u001b[0m in \u001b[0;36mwrite_submission_file\u001b[0;34m(X_pred, file_name)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;31m# write file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/predictions_csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutput_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m         \u001b[0mhiuhiuhiuh\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[0moutput_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-90db326a6903>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrite_submission_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'submission_average_over_users_0.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
      ]
     }
    ],
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
