--- a/src_submission/KNN_bias.ipynb
+++ b/src_submission/KNN_bias.ipynb
@@ -25,8 +25,8 @@
     "from surprise.model_selection.search import RandomizedSearchCV\n",
     "from surprise.prediction_algorithms.knns import KNNBaseline\n",
     "\n",
-    "import helpers\n",
-    "from surprise_helpers import CustomReader, get_ratings_from_predictions"
+    "import data_handler\n",
+    "from surprise_extensions import CustomReader, get_ratings_from_predictions"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "reader = CustomReader()\n",
-    "filepath = helpers.get_train_file_path()\n",
+    "filepath = data_handler.get_train_file_path()\n",
     "data = Dataset.load_from_file(filepath, reader=reader)"
    ]
   },
@@ -289,7 +289,7 @@
     }
    ],
    "source": [
-    "test_file_path = helpers.get_test_file_path()\n",
+    "test_file_path = data_handler.get_test_file_path()\n",
     "test_data = Dataset.load_from_file(test_file_path, reader=reader)\n",
     "testset = test_data.construct_testset(test_data.raw_ratings)\n",
     "predictions = algo.test(testset)\n",
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_KNNBaseline_1.csv')\n",
+    "output = data_handler.write_submission(ratings, 'submission_surprise_KNNBaseline_1.csv')\n",
     "print(output[0:100])"
    ]
   },
