--- a/src_submission/SVD_basic.ipynb
+++ b/src_submission/SVD_basic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from matrix_helpers import load_data, write_submission_file"
+    "from data_handler import load_data, write_submission_file"
    ]
   },
   {
