--- a/src_submission/average_over_items.ipynb
+++ b/src_submission/average_over_items.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from helpers import load_data, write_submission_file"
+    "from data_handler import load_data, write_submission_file"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impute missing entries (average rating per user)"
+    "## For each user, predict its missing entries by the average of that user's available ratings"
    ]
   },
   {
@@ -75,30 +75,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.04347826 4.04347826 4.04347826 4.04347826 4.04347826 4.04347826\n",
-      "  4.04347826 4.04347826 4.04347826 5.        ]\n",
-      " [3.77181208 3.77181208 3.77181208 3.         3.77181208 5.\n",
-      "  3.77181208 4.         3.77181208 3.77181208]\n",
-      " [3.52325581 3.52325581 3.52325581 2.         3.52325581 3.52325581\n",
-      "  3.52325581 3.52325581 3.52325581 3.52325581]\n",
-      " [3.8        3.8        3.8        3.8        3.8        3.8\n",
-      "  3.8        3.8        3.8        3.8       ]\n",
-      " [3.98507463 2.         3.98507463 3.98507463 3.98507463 5.\n",
-      "  3.98507463 3.         3.98507463 3.98507463]\n",
-      " [4.36686391 4.36686391 4.36686391 4.36686391 4.36686391 5.\n",
-      "  4.36686391 4.36686391 4.36686391 4.36686391]\n",
-      " [4.12903226 4.12903226 4.12903226 4.12903226 4.12903226 4.12903226\n",
-      "  4.12903226 4.12903226 4.12903226 4.12903226]\n",
-      " [4.11538462 4.11538462 4.11538462 4.11538462 4.11538462 4.11538462\n",
-      "  4.11538462 4.11538462 4.11538462 4.11538462]\n",
-      " [3.97191011 3.97191011 3.97191011 3.97191011 3.97191011 5.\n",
-      "  3.97191011 3.97191011 3.97191011 3.        ]\n",
-      " [3.82242991 3.82242991 3.82242991 1.         3.82242991 5.\n",
-      "  3.82242991 5.         3.82242991 3.82242991]]\n"
+      "[[4.0434785 4.0434785 4.0434785 4.0434785 4.0434785 4.0434785 4.0434785\n",
+      "  4.0434785 4.0434785 5.       ]\n",
+      " [3.771812  3.771812  3.771812  3.        3.771812  5.        3.771812\n",
+      "  4.        3.771812  3.771812 ]\n",
+      " [3.5232558 3.5232558 3.5232558 2.        3.5232558 3.5232558 3.5232558\n",
+      "  3.5232558 3.5232558 3.5232558]\n",
+      " [3.8       3.8       3.8       3.8       3.8       3.8       3.8\n",
+      "  3.8       3.8       3.8      ]\n",
+      " [3.9850745 2.        3.9850745 3.9850745 3.9850745 5.        3.9850745\n",
+      "  3.        3.9850745 3.9850745]\n",
+      " [4.3668637 4.3668637 4.3668637 4.3668637 4.3668637 5.        4.3668637\n",
+      "  4.3668637 4.3668637 4.3668637]\n",
+      " [4.129032  4.129032  4.129032  4.129032  4.129032  4.129032  4.129032\n",
+      "  4.129032  4.129032  4.129032 ]\n",
+      " [4.1153846 4.1153846 4.1153846 4.1153846 4.1153846 4.1153846 4.1153846\n",
+      "  4.1153846 4.1153846 4.1153846]\n",
+      " [3.97191   3.97191   3.97191   3.97191   3.97191   5.        3.97191\n",
+      "  3.97191   3.97191   3.       ]\n",
+      " [3.82243   3.82243   3.82243   1.        3.82243   5.        3.82243\n",
+      "  5.        3.82243   3.82243  ]]\n"
      ]
     }
    ],
    "source": [
+    "# y is vectori containing the sums of each user's available ratings\n",
     "y = X.sum(axis=1)\n",
     "rating_counts = np.count_nonzero(X, axis =1)\n",
     "average_per_user = y/rating_counts\n",
@@ -122,16 +123,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Id,Prediction\n",
-      "r37_c1,3.757732\n",
-      "r73_c1,3.540000\n",
-      "r156_c1,4.230216\n",
-      "r160_c1,3.692308\n",
-      "r248_c1,3.928144\n",
-      "r25\n"
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-59305c171db1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrite_submission_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"submission_average_over_items_0.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
      ]
     }
    ],
