refactoring: ALS, averages, DCF, KNN_bias, NMF, SVD_basic

--- a/src_submission/NMF.ipynb
+++ b/src_submission/NMF.ipynb
@@ -4,15 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NMF baseline algorithm using surprise package:\n",
+    "# Non-negative Matrix Factorization \n",
     "\n",
-    "using matrix_factorization.NMF algorithm from http://surprise.readthedocs.io/en/stable/matrix_factorization.html#surprise.prediction_algorithms.matrix_factorization.NMF\n"
+    "using `matrix_factorization.NMF` algorithm from http://surprise.readthedocs.io/en/stable/matrix_factorization.html#surprise.prediction_algorithms.matrix_factorization.NMF"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "## Theory behind\n",
+    "\n",
     "A collaborative filtering algorithm based on Non-negative Matrix Factorization.\n",
     "### [LZXZ14]Luo, Zhou, Xia and Zhu. And efficient non-negative matrix factorization-based approach to collab filtering for recommender systems.\n",
     "This algorithm is very similar to SVD. The prediction $r̂_{ui}$ is set as:\n",
@@ -29,7 +32,9 @@
     "\n",
     "A biased version is available by setting $\\textit{biased}$ parameter to $\\textit{True}$. In this case, the prediction is set as\n",
     "$r̂_{ui}=μ+b_u+b_i+q^T_ip_u$\n",
-    "still ensuring positive factors."
+    "still ensuring positive factors.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -141,8 +146,6 @@
     "0.995282415101\n",
     "{'n_epochs': 256}\n",
     "\n",
-    "\n",
-    "\n",
     "0.997362682285\n",
     "{'biased': False, 'n_epochs': 165, 'n_factors': 21, 'reg_pu': 0.1015205155303968, 'reg_qi': 0.064342096085956021}\n",
     "\n",
@@ -151,11 +154,6 @@
     "\n",
     "0.996537013593\n",
     "{'biased': False, 'n_epochs': 146, 'n_factors': 44, 'reg_pu': 0.039543644841938855, 'reg_qi': 0.094522593860989254}\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "---\n",
     "\n",
     "1.00796302363\n",
     "{'reg_pu': 0.16886198480906289}\n",
@@ -182,8 +180,7 @@
     "{'biased': True}\n",
     "\n",
     "1.00241560742\n",
-    "{'biased': True, 'n_factors': 13}\n",
-    "\n"
+    "{'biased': True, 'n_factors': 13}"
    ]
   },
   {
@@ -211,8 +208,6 @@
    ],
    "source": [
     "# choose optimal params from above\n",
-    "# {'biased': False, 'n_epochs': 193, 'n_factors': 31, 'reg_pu': 0.066509535353532462, 'reg_qi': 0.10446537083767632}\n",
-    "\n",
     "algo = NMF(biased=False, n_epochs=193, n_factors=31, reg_pu=0.066509535353532462, reg_qi=0.10446537083767632)\n",
     "\n",
     "# train \n",
@@ -322,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
