--- a/src_submission/SVD_basic.ipynb
+++ b/src_submission/SVD_basic.ipynb
@@ -4,14 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SVD basic"
+    "# SVD Basic"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Idea: Assume the data has an underlying structure where each user and each item has a representation in the same concept space. Can use baseline solution (approximated matrix X_init, where missing ratings are set to average of user's available ratings) as an initialization for SVD. By discarding small singular values we can remove noise and approximate X_true. "
+    "---\n",
+    "## Theory behind\n",
+    "\n",
+    "Idea: Assume the data has an underlying structure where each user and each item has a representation in the same concept space. First have to impute missing ratings to be able to apply SVD. Can for example set them to average of user's available ratings. By discarding small singular values we can remove noise and approximate X_true. \n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -114,7 +119,7 @@
     "    no_rating = (X[row, :] == 0)\n",
     "    # for each user, set all the missing ratings to the average of this users available ratings\n",
     "    X_init[row, no_rating] = average_per_user[row]\n",
-    "print(X_init[0:10, 0:10])\n"
+    "print(X_init[0:10, 0:10])"
    ]
   },
   {
@@ -140,7 +145,7 @@
     }
    ],
    "source": [
-    "# do a svd of the X_init matrix built above\n",
+    "# do a SVD of the X_init matrix built above\n",
     "U, d, Vt = np.linalg.svd(X_init, full_matrices=True)\n",
     "print(U.shape)\n",
     "print(d.shape)\n",
@@ -218,12 +223,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observations\n",
+    "The plot shows that X_init can be compressed with a relativ small error by keeping approximately 15 singular values (the knee of the plot)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reconstruct Matrix "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reconstruct Matrix -> Approximation by removing small singular values\n",
+    "# Removing small singular values\n",
     "k = 15\n",
     "# extract the submatrices from U,D and Vt\n",
     "U_prime = U[:,:k]\n",
@@ -276,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
