--- a/src_submission/SVD_improved.ipynb
+++ b/src_submission/SVD_improved.ipynb
@@ -12,6 +12,8 @@
    "metadata": {},
    "source": [
     "---\n",
+    "## Theory behind\n",
+    "\n",
     "### [KBV09] Yehuda Koren. Matrix factorization techniques for recommender systems.\n",
     "\n",
     "see [Matrix Factorization techniques](https://datajobs.com/data-science-repo/Recommender-Systems-[Netflix].pdf)\n",
@@ -40,7 +42,9 @@
     "$r_{ui} = \\mu + b_i + b_u + q_i^Tp_u$\n",
     "\n",
     "adjusted objective: <br/>\n",
-    " $min_{p_u, q_i} \\sum_{x_{ui}}(r_{ui}-\\mu-b_u-b_i -p_u^Tq_i)^2 + \\lambda ($$ \\lVert q_i \\rVert $$^2 + $$ \\lVert p_u \\rVert $$^2 + b_u^2 + b_i^2)$"
+    " $min_{p_u, q_i} \\sum_{x_{ui}}(r_{ui}-\\mu-b_u-b_i -p_u^Tq_i)^2 + \\lambda ($$ \\lVert q_i \\rVert $$^2 + $$ \\lVert p_u \\rVert $$^2 + b_u^2 + b_i^2)$\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -560,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
