--- a/src_submission/average_over_items.ipynb
+++ b/src_submission/average_over_items.ipynb
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "# y is vectori containing the sums of each user's available ratings\n",
+    "# y is vector containing the sums of each user's available ratings\n",
     "y = X.sum(axis=1)\n",
     "rating_counts = np.count_nonzero(X, axis =1)\n",
     "average_per_user = y/rating_counts\n",
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
