--- a/src_submission/ALS.ipynb
+++ b/src_submission/ALS.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Baseline using scikit-surprise"
+    "# Alternating Least Squares \n",
+    "\n",
+    "baseline algorithm using surprise package:\n",
+    "\n",
+    "using `baseline_only.BaselineOnly` algorithm from http://surprise.readthedocs.io/en/stable/prediction_algorithms_package.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Theory behind\n",
+    "\n",
+    "TODO\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -156,13 +172,6 @@
     "output = data_handler.write_submission(ratings, 'submission_surprise_baseline.csv')\n",
     "print(output[0:10])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -181,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
