--- a/src_submission/KNN_bias.ipynb
+++ b/src_submission/KNN_bias.ipynb
@@ -4,10 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# KNN\n",
+    "# K-Nearest Neighbors algorithm with bias\n",
     "baseline algorithm using surprise package:\n",
     "\n",
     "using `knns.KNNBaseline` algorithm from http://surprise.readthedocs.io/en/stable/prediction_algorithms_package.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Theory behind\n",
+    "\n",
+    "TODO\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -123,8 +135,6 @@
     "0.990740953266\n",
     "{'k': 269, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 293, 'user_based': True}}\n",
     "\n",
-    "------\n",
-    "\n",
     "0.990745916194\n",
     "{'k': 190, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 191, 'user_based': True}}\n",
     "\n",
@@ -216,7 +226,7 @@
     "{'k': 86, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 0, 'user_based': True}}\n",
     "\n",
     "1.008268129160658\n",
-    "{}\n"
+    "{}"
    ]
   },
   {
@@ -253,7 +263,6 @@
    ],
    "source": [
     "# choose optimal params from above\n",
-    "# {'k': 237, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 279, 'user_based': True}}\n",
     "sim_options = {'name': 'pearson_baseline',\n",
     "               'shrinkage': 279,\n",
     "               'user_based': True\n",
@@ -367,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
